[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/papertex.png" type="Texture" id=1]
[ext_resource path="res://fonts/BuildTabTheme.tres" type="Theme" id=2]
[ext_resource path="res://sprites/BG/IconRect.png" type="Texture" id=3]
[ext_resource path="res://fonts/SourceSerifPro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/EventPopup.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
use_filter = true
font_data = ExtResource( 4 )

[node name="EventPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="NinePatchRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 0.486275, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
margin_bottom = -48.0
alignment = 1

[node name="Control" type="Control" parent="NinePatchRect/HBoxContainer"]
margin_right = 127.0
margin_bottom = 624.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
margin_left = 131.0
margin_right = 1148.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="Title" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1017.0
margin_bottom = 161.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 1017.0
margin_bottom = 485.0
rect_min_size = Vector2( 0, 320 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 1017.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Desc" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1017.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "Desc
Lorem ipsum dolor sit amet, consectetur adipiscing elit. "
autowrap = true

[node name="Result" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 89.0
margin_right = 1017.0
margin_bottom = 130.0
theme = ExtResource( 2 )
text = "Result"
autowrap = true

[node name="Control" type="Control" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 489.0
margin_right = 960.0
margin_bottom = 492.0
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0.129412, 1, 0, 1 )
margin_top = 489.0
margin_right = 1017.0
margin_bottom = 617.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 5
size_flags_vertical = 5
disabled = true
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -20.5
margin_right = 22.0
margin_bottom = 20.5
theme = ExtResource( 2 )
text = "OK"

[node name="Control2" type="Control" parent="NinePatchRect/HBoxContainer"]
margin_left = 1152.0
margin_right = 1280.0
margin_bottom = 624.0
size_flags_horizontal = 3

[connection signal="pressed" from="NinePatchRect/HBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
